Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">ClusType</h1>
-      <h2 class="project-tagline">Code repository for ClusType software.</h2>
+      <h2 class="project-tagline">An Open Tool for Automatic Entity Recognition and Typing for Massive, Domain-Specific Corpora</h2>
       <a href="https://github.com/shanzhenren/ClusType" class="btn">View on GitHub</a>
       <a href="https://github.com/shanzhenren/ClusType/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/shanzhenren/ClusType/tarball/master" class="btn">Download .tar.gz</a>
