--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 <a id="publication" class="anchor" href="#publication" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publication</h2>
 
 <ul>
-<li>Xiang Ren*, Ahmed El-Kishky, Chi Wang, Fangbo Tao, Clare R. Voss, Heng Ji, Jiawei Han, "<strong><a href="http://web.engr.illinois.edu/%7Exren7/fp611-ren.pdf">ClusType: Effective Entity Recognition and Typing by Relation Phrase-Based Clustering</a></strong>”, Proc. of 2015 ACM SIGKDD Int. Conf. on Knowledge Discovery and Data Mining (KDD'15), Sydney, Australia, August 2015. (<a href="http://web.engr.illinois.edu/%7Exren7/KDD15-ClusType_v3.pdf">Slides</a>)</li>
+<li><p>Xiang Ren*, Ahmed El-Kishky, Chi Wang, Fangbo Tao, Clare R. Voss, Heng Ji, Jiawei Han, "<strong><a href="http://web.engr.illinois.edu/%7Exren7/fp611-ren.pdf">ClusType: Effective Entity Recognition and Typing by Relation Phrase-Based Clustering</a></strong>”, Proc. of 2015 ACM SIGKDD Int. Conf. on Knowledge Discovery and Data Mining (KDD'15), Sydney, Australia, August 2015. (<a href="http://web.engr.illinois.edu/%7Exren7/KDD15-ClusType_v3.pdf">Slides</a>)</p></li>
+<li><p>Xiang Ren*, Ahmed El-Kishky, Chi Wang, Jiawei Han, "<strong><a href="http://research.microsoft.com/en-us/people/chiw/kdd15tutorial.aspx">Automatic Entity Recognition and Typing from Massive Text Corpora: A Phrase and Network Mining Approach</a></strong>”, Proc. of 2015 ACM SIGKDD Int. Conf. on Knowledge Discovery and Data Mining (KDD'15 Conference Tutorial), Sydney, Australia, August 2015. (<a href="http://research.microsoft.com/en-us/people/chiw/kdd15tutorial.aspx">Website</a>) (<a href="http://hanj.cs.illinois.edu/kdd-15/UIUC-Tutorial.pdf">Slides</a>)</p></li>
 </ul>
 
 <h2>
